force-app/main/default/objects/WAMessage__c/WAMessage__c.object-meta.xml
<CustomObject>
    <label>WA Message</label>
    <nameField>
        <displayFormat>WA-{0000}</displayFormat>
        <label>WA Message ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WA Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>