force-app/main/default/objects/WAMessage__c/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <label>AgentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>