force-app/main/default/objects/WAMessage__c/fields/BusinessPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhoneNumber__c</fullName>
    <label>Business Phone Number</label>
    <type>Phone</type>
</CustomField>