force-app/main/default/objects/WAMessage__c/fields/Is_Seen__c.field-meta.xml
<CustomField>
    <fullName>Is_Seen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Seen</label>
    <type>Checkbox</type>
</CustomField>