force-app/main/default/objects/WAMessage__c/fields/MessageContent__c.field-meta.xml
<CustomField>
    <fullName>MessageContent__c</fullName>
    <label>Message Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>