force-app/main/default/objects/WAMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Outgoing__c</columns>
    <columns>MessageContent__c</columns>
    <columns>CustomerName__c</columns>
    <columns>AgentName__c</columns>
    <columns>Platform__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>